# KeyBoard

./: .gitignore  README.md  pyproject.toml  scripts.py
.github/workflows/: linter_check_before_merge.yml  tests_check_before_merge.yml
keyboard_project/: __init__.py
keyboard_project/kb_app/: admin.py  models.py  tests.py  urls.py  views.py
keyboard_project/kb_app/templates/kb_app/: home.html  keyboard_details.html
keyboard_project/keyboard_project/: asgi.py  settings.py  urls.py
keyboard_project/templates/: base.html
keyboard_project/templates/include/: footer.html  nav.html
src/: __init__.py  manage.py
src/kb_app/: admin.py  models.py  tests.py  urls.py  views.py
src/kb_app/migrations/: 0001_initial.py  0002_specification_name_and_more.py  0003_keyboard_price.py
src/kb_app/templates/kb_app/: keyboard_list.html
src/keyboard_project/: settings.py  urls.py  wsgi.py
src/templates/: base.html
src/templates/include/: nav.html
